@@ -16,7 +16,7 @@ public class MaxArrayDeque<T> extends ArrayDeque<T>  {
 as governed by the previously given Comparator.
 If the MaxArrayDeque is empty, simply return null. */
     public T max() {
-        T maxElement = this.getFirst();
+        T maxElement = this.get(0);
         for (T x : this) {
             if (c.compare(x, maxElement) > 0) {
                 maxElement = x;
@@ -28,7 +28,7 @@ If the MaxArrayDeque is empty, simply return null. */
 as governed by the parameter Comparator c.
 If the MaxArrayDeque is empty, simply return null.*/
     public T max(Comparator<T> c){
-        T maxElement = this.getFirst();
+        T maxElement = this.get(0);
         for (T x : this) {
             if (c.compare(x, maxElement) > 0) {
                 maxElement = x;
